Revelation changelog

---------------[ xxxx-xx-xx : 0.4.0 ]---------------

2004-12-16  Erik Grinaker <erikg@codepoet.no>

	* used generic INSTALL instructions from automake


2004-12-15  Erik Grinaker <erikg@codepoet.no>

	* added a preference for launching entries on doubleclick

	* added a preference for copying username to PRIMARY selection
	when launching an entry

	* added gnome session manager support

	* gtk/gnome arguments are properly handled


2004-12-14  Erik Grinaker <erikg@codepoet.no>

	* all entry editing widgets activates default dialog response

	* set default response for filechooser dialogs

	* display tooltips wherever relevant

	* wrapped and used gnome_authentication_manager_init()


2004-12-13  Erik Grinaker <erikg@codepoet.no>

	* added support for drag and drop of entries in tree

	* added dynamic menu items for copying username/password to
	clipboard


2004-12-10  Erik Grinaker <erikg@codepoet.no>

	* rewrote the application code, as well as the dialog and u
	modules

	* the entry clipboard is shared between revelation instances

	* wrote unit tests for new clipboard classes, and updated unit
	tests for config module

	* added a mimetype and icon for Revelation data files

	* files can be dragged to Revelation to open them

	* check file format before asking for password

2004-11-26  Erik Grinaker <erikg@codepoet.no>

	* rewrote the data module

	* wrote unit tests for the data module

	* moved build-time variables to config module

2004-11-23  Erik Grinaker <erikg@codepoet.no>

	* split configuration handling into a separate module

	* wrote unit tests for the config module

2004-11-19  Erik Grinaker <erikg@codepoet.no>

	* cleaned up the entry module API

	* added unit tests for the entry module

	* moved parse_subst() from misc module to util module

	* added unit tests for parse_subst()

	* removed the misc module

2004-11-03  Erik Grinaker <erikg@codepoet.no>

	* rewrote the FPM data handler

	* added Makefile target for unit tests
