@@ -9,6 +9,7 @@
 		<separator />
 		<menuitem action="clip-cut" />
 		<menuitem action="clip-copy" />
+		<menuitem action="clip-chain" />
 		<menuitem action="clip-paste" />
 	</popup>
 </ui>
